# Topicos-D

./: .gitignore  4_test.ipynb  5_test.ipynb  README.md  main.py  pyproject.toml
notebook_10/: 10_Evaluación+de+resultados.ipynb
notebook_6/: 6_Visualización+del+conjunto+de+datos.ipynb
notebook_7/: 7_División+del+conjunto+de+datos.ipynb
notebook_8/: 8_Preparación+del+conjunto+de+datos.ipynb
notebook_9/: 9_Creación+de+Transformadores+y+Pipelines+personalizados.ipynb
